# breathe

./: .travis.yml  README.md
.github/ISSUE_TEMPLATE/: pbi-template.md
.travis/: build-and-deploy.sh
projects/infrastructure/: .gitignore  README.md  backend.tf  backend.tf.tmpl  locals.tf  providers.tf  staging_plan  state.tf
projects/infrastructure/.travis/: ci.sh  deploy.sh  install-terraform.sh
projects/infrastructure/bootstrap-state-bucket/: state.tf
projects/infrastructure/deploy-system/: prediction-api.json  prediction-api.tf  predictionapi.json  web-ui.tf
projects/prediction-api/: .dockerignore  .gitignore  Dockerfile  apiary.apib  dredd.yml  pollution_forecast_model.h5  pollution_forecast_model_2.h5  pollution_forecast_model_3.h5  pollution_forecast_model_5.h5  pyproject.toml
projects/prediction-api/.travis/: build.sh  ci.sh
projects/prediction-api/fixtures/vcr_cassettes/: measurements.yaml
projects/prediction-api/prediction_api/: __init__.py  model_loader.py  server.py
projects/prediction-api/prediction_api/ml_model/: create_model.py
projects/prediction-api/tests/: test_model_loader.py  test_prediction_api.py  test_server.py
projects/prediction-api/tests/test_ml_model/: __init__.py  test_ml_model.py
projects/web-ui/: .gitignore  README.md  angular.json  lambda.js  ng-toolkit.json  package-lock.json  package.json  server.ts  tslint.json
projects/web-ui/.travis/: build.sh  ci.sh
projects/web-ui/blueprints/: openaq.apib.md
projects/web-ui/e2e/: protractor.conf.js
projects/web-ui/pacts/: web-ui-prediction-api.json
(+73 files in other folders)
