[tool.poetry]
name = "prediction-api"
version = "0.1.0"
description = ""
authors = ["Ricool06 <ricoolohsix@hotmail.com>"]

[tool.poetry.dependencies]
python = "^2.7"
tensorflow = "^1.13"
keras = "^2.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
